package com.company.service.dbHelper;

public class Technician extends Person {

    public Technician(String name) {
        super(name);
    }
}